--- a/src/ventanas/PanelDesign.form
+++ b/src/ventanas/PanelDesign.form
@@ -218,6 +218,14 @@
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
             </Component>
+            <Component class="javax.swing.JButton" name="btnDise&#xf1;ar">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="&#xa1;Dise&#xf1;alo!"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDise&#xf1;arActionPerformed"/>
+              </Events>
+            </Component>
           </SubComponents>
         </Container>
       </SubComponents>
